--- a/src/page/home-page/Slide.css
+++ b/src/page/home-page/Slide.css
@@ -72,3 +72,20 @@ ul{
     transition-duration: 0.5s;
 }
 
+.btn-purchase-product-2 button {
+    padding: 15px 0;
+    width: 50%;
+    background-color: #717EE0;
+    border-radius: 50px;
+    border: 0;
+    color: #ffffff;
+    font-weight: 600;
+    margin-top: 10px;
+}
+
+.btn-purchase-product-2 button:hover {
+    cursor: pointer;
+    background-color: #222222;
+    transition-duration: 0.5s;
+}
+
